# repeatfinder

./: .pylintrc  CMakeLists.txt  LICENSE  README.md  citation.cff  pyproject.toml  version.py
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml
dna_repeat_finder/: __init__.py  _version.py  cli.py  colours.py
pydna_repeatfinder/: _version.py  cli.py  repeat_search.py
repeat_finder/: __init__.py  cli.py  colours.py  rob_error.py  sequences.py
src/: repeatFinder.cpp  repeatFinder.h
tests/: test.fasta  test_long.fasta
